paas/apache/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apache-dashboard
  name: apache-dashboard
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: apache-dashboard
  sessionAffinity: None
  type: ClusterIP
